// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`executeSwap accepts a nonce 1`] = `
[
  [
    3,
    "0x74623171676539767664326d6d6a7866687578757132303468346678787068723076666e736e78323035",
    5,
    "0x",
    {
      "nonce": 1,
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap allows to not wait for transaction inclusion 1`] = `
[
  [
    3,
    "0x74623171676539767664326d6d6a7866687578757132303468346678787068723076666e736e78323035",
    5,
    "0x",
    {
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap can be invoked with localnet options 1`] = `
[
  [
    3,
    "0x626372743170376d6e6c6c36717570346c336c6367677668377432366d3467727961776a793064306367616e7a683665347a6a6d326433727471743975737178",
    5,
    "0x456",
    "1",
    "0x",
    {},
  ],
]
`;

exports[`executeSwap can be invoked with localnet options 2`] = `
[
  [
    "MY ADDRESS",
    "0x123",
  ],
]
`;

exports[`executeSwap submits a native call ({"ccmMetadata": [Object], "destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "FLIP", "destChain": "Ethereum", "srcAsset": "ETH", "srcChain": "Ethereum"}) 1`] = `
[
  [
    1,
    "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
    2,
    "0xdeadc0de",
    "101",
    "0x",
    {
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap submits a native call ({"ccmMetadata": [Object], "destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "USDC", "destChain": "Ethereum", "srcAsset": "ETH", "srcChain": "Ethereum"}) 1`] = `
[
  [
    1,
    "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
    3,
    "0xdeadc0de",
    "101",
    "0x",
    {
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap submits a native swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "FLIP", "destChain": "Ethereum", "srcAsset": "ETH", "srcChain": "Ethereum"}) 1`] = `
[
  [
    1,
    "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
    2,
    "0x",
    {
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap submits a native swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "USDC", "destChain": "Ethereum", "srcAsset": "ETH", "srcChain": "Ethereum"}) 1`] = `
[
  [
    1,
    "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
    3,
    "0x",
    {
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap submits a native swap ({"destAddress": "5F3sa2TJAWMqDhXG6jhV4N8ko9SxwGy8TpaNS1repo5EYjQX", "destAsset": "DOT", "destChain": "Polkadot", "srcAsset": "ETH", "srcChain": "Ethereum"}) 1`] = `
[
  [
    2,
    "0x841226ea070c9577979ca2e854130fbe3253853c13c05943e09908312950275d",
    4,
    "0x",
    {
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap submits a native swap ({"destAddress": "tb1qge9vvd2mmjxfhuxuq204h4fxxphr0vfnsnx205", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "ETH", "srcChain": "Ethereum"}) 1`] = `
[
  [
    3,
    "0x74623171676539767664326d6d6a7866687578757132303468346678787068723076666e736e78323035",
    5,
    "0x",
    {
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap submits a native swap ({"destAddress": "tb1qge9vvd2mmjxfhuxuq204h4fxxphr0vfnsnx205", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "ETH", "srcChain": "Ethereum"}) 2`] = `
[
  [
    3,
    "0x74623171676539767664326d6d6a7866687578757132303468346678787068723076666e736e78323035",
    5,
    "0x",
    {
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap submits a token call ({"ccmMetadata": [Object], "destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "ETH", "destChain": "Ethereum", "srcAsset": "FLIP", "srcChain": "Ethereum"}) 1`] = `
[
  [
    1,
    "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
    1,
    "0xdeadc0de",
    "101",
    "0xcD079EAB6B5443b545788Fd210C8800FEADd87fa",
    "1",
    "0x",
    {},
  ],
]
`;

exports[`executeSwap submits a token call ({"ccmMetadata": [Object], "destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "ETH", "destChain": "Ethereum", "srcAsset": "FLIP", "srcChain": "Ethereum"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xa94d6b1853F3cb611Ed3cCb701b4fdA5a9DACe85",
  ],
]
`;

exports[`executeSwap submits a token call ({"ccmMetadata": [Object], "destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "ETH", "destChain": "Ethereum", "srcAsset": "USDC", "srcChain": "Ethereum"}) 1`] = `
[
  [
    1,
    "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
    1,
    "0xdeadc0de",
    "101",
    "0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238",
    "1",
    "0x",
    {},
  ],
]
`;

exports[`executeSwap submits a token call ({"ccmMetadata": [Object], "destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "ETH", "destChain": "Ethereum", "srcAsset": "USDC", "srcChain": "Ethereum"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xa94d6b1853F3cb611Ed3cCb701b4fdA5a9DACe85",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "ETH", "destChain": "Ethereum", "srcAsset": "FLIP", "srcChain": "Ethereum"}) 1`] = `
[
  [
    1,
    "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
    1,
    "0x826180541412D574cf1336d22c0C0a287822678A",
    "1",
    "0x",
    {},
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "ETH", "destChain": "Ethereum", "srcAsset": "FLIP", "srcChain": "Ethereum"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xF5e10380213880111522dd0efD3dbb45b9f62Bcc",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "ETH", "destChain": "Ethereum", "srcAsset": "USDC", "srcChain": "Ethereum"}) 1`] = `
[
  [
    1,
    "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
    1,
    "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
    "1",
    "0x",
    {},
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "ETH", "destChain": "Ethereum", "srcAsset": "USDC", "srcChain": "Ethereum"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xF5e10380213880111522dd0efD3dbb45b9f62Bcc",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "5F3sa2TJAWMqDhXG6jhV4N8ko9SxwGy8TpaNS1repo5EYjQX", "destAsset": "DOT", "destChain": "Polkadot", "srcAsset": "FLIP", "srcChain": "Ethereum"}) 1`] = `
[
  [
    2,
    "0x841226ea070c9577979ca2e854130fbe3253853c13c05943e09908312950275d",
    4,
    "0x826180541412D574cf1336d22c0C0a287822678A",
    "1",
    "0x",
    {},
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "5F3sa2TJAWMqDhXG6jhV4N8ko9SxwGy8TpaNS1repo5EYjQX", "destAsset": "DOT", "destChain": "Polkadot", "srcAsset": "FLIP", "srcChain": "Ethereum"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xF5e10380213880111522dd0efD3dbb45b9f62Bcc",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "5F3sa2TJAWMqDhXG6jhV4N8ko9SxwGy8TpaNS1repo5EYjQX", "destAsset": "DOT", "destChain": "Polkadot", "srcAsset": "USDC", "srcChain": "Ethereum"}) 1`] = `
[
  [
    2,
    "0x841226ea070c9577979ca2e854130fbe3253853c13c05943e09908312950275d",
    4,
    "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
    "1",
    "0x",
    {},
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "5F3sa2TJAWMqDhXG6jhV4N8ko9SxwGy8TpaNS1repo5EYjQX", "destAsset": "DOT", "destChain": "Polkadot", "srcAsset": "USDC", "srcChain": "Ethereum"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xF5e10380213880111522dd0efD3dbb45b9f62Bcc",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1pv7lmxr8vvf220cumd4pft77l4pds85pt4l6rw6yrr3cghyf5kl7sq76puk", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "FLIP", "srcChain": "Ethereum"}) 1`] = `
[
  [
    3,
    "0x6263317076376c6d78723876766632323063756d643470667437376c3470647338357074346c36727736797272336367687966356b6c377371373670756b",
    5,
    "0x826180541412D574cf1336d22c0C0a287822678A",
    "1",
    "0x",
    {},
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1pv7lmxr8vvf220cumd4pft77l4pds85pt4l6rw6yrr3cghyf5kl7sq76puk", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "FLIP", "srcChain": "Ethereum"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xF5e10380213880111522dd0efD3dbb45b9f62Bcc",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1pv7lmxr8vvf220cumd4pft77l4pds85pt4l6rw6yrr3cghyf5kl7sq76puk", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "FLIP", "srcChain": "Ethereum"}) 3`] = `
[
  [
    3,
    "0x6263317076376c6d78723876766632323063756d643470667437376c3470647338357074346c36727736797272336367687966356b6c377371373670756b",
    5,
    "0x826180541412D574cf1336d22c0C0a287822678A",
    "1",
    "0x",
    {},
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1pv7lmxr8vvf220cumd4pft77l4pds85pt4l6rw6yrr3cghyf5kl7sq76puk", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "FLIP", "srcChain": "Ethereum"}) 4`] = `
[
  [
    "MY ADDRESS",
    "0xF5e10380213880111522dd0efD3dbb45b9f62Bcc",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1pv7lmxr8vvf220cumd4pft77l4pds85pt4l6rw6yrr3cghyf5kl7sq76puk", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "USDC", "srcChain": "Ethereum"}) 1`] = `
[
  [
    3,
    "0x6263317076376c6d78723876766632323063756d643470667437376c3470647338357074346c36727736797272336367687966356b6c377371373670756b",
    5,
    "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
    "1",
    "0x",
    {},
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1pv7lmxr8vvf220cumd4pft77l4pds85pt4l6rw6yrr3cghyf5kl7sq76puk", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "USDC", "srcChain": "Ethereum"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xF5e10380213880111522dd0efD3dbb45b9f62Bcc",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1pv7lmxr8vvf220cumd4pft77l4pds85pt4l6rw6yrr3cghyf5kl7sq76puk", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "USDC", "srcChain": "Ethereum"}) 3`] = `
[
  [
    3,
    "0x6263317076376c6d78723876766632323063756d643470667437376c3470647338357074346c36727736797272336367687966356b6c377371373670756b",
    5,
    "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
    "1",
    "0x",
    {},
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1pv7lmxr8vvf220cumd4pft77l4pds85pt4l6rw6yrr3cghyf5kl7sq76puk", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "USDC", "srcChain": "Ethereum"}) 4`] = `
[
  [
    "MY ADDRESS",
    "0xF5e10380213880111522dd0efD3dbb45b9f62Bcc",
  ],
]
`;

exports[`executeSwap submits a token swap with sufficient approval 1`] = `
[
  [
    3,
    "0x74623171676539767664326d6d6a7866687578757132303468346678787068723076666e736e78323035",
    5,
    "0xcD079EAB6B5443b545788Fd210C8800FEADd87fa",
    "1",
    "0x",
    {},
  ],
]
`;

exports[`executeSwap submits a token swap with sufficient approval 2`] = `
[
  [
    "MY ADDRESS",
    "0xa94d6b1853F3cb611Ed3cCb701b4fdA5a9DACe85",
  ],
]
`;
